src/test/resources/Parser/SyntaxErrors/MultiExtend.front
class I {
    private int32 i;
}
class A : I {}
class B : A, I {}